:white_check_mark: 添加测试代码

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>cicada-core</module>
+        <module>cicada-example</module>
     </modules>
 
     <properties>
