--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.1.40</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>19.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
