--- a/cicada-example/pom.xml
+++ b/cicada-example/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <version>1.0.0-SNAPSHOT</version>
 
     <artifactId>cicada-example</artifactId>
     <packaging>jar</packaging>
@@ -31,6 +32,7 @@
             <artifactId>cicada-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
 
 
