--- a/cicada-core/pom.xml
+++ b/cicada-core/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>cicada</artifactId>
         <groupId>top.crossoverjie.opensource</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cicada-core</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <dependencies>
