--- a/cicada-example/pom.xml
+++ b/cicada-example/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <artifactId>cicada</artifactId>
         <groupId>top.crossoverjie.opensource</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <artifactId>cicada-example</artifactId>
     <packaging>jar</packaging>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>top.crossoverjie.opensource</groupId>
             <artifactId>cicada-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
     </dependencies>
