--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>top.crossoverjie.opensource</groupId>
     <artifactId>cicada</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modules>
         <module>cicada-core</module>
         <module>cicada-example</module>
