--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
                 <artifactId>guava</artifactId>
                 <version>19.0</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>1.19</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
