--- a/cicada-example/pom.xml
+++ b/cicada-example/pom.xml
@@ -18,7 +18,12 @@
         <dependency>
             <groupId>top.crossoverjie.opensource</groupId>
             <artifactId>cicada-core</artifactId>
-            <version>1.0.4</version>
+            <version>2.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
 
     </dependencies>
