--- a/cicada-example/pom.xml
+++ b/cicada-example/pom.xml
@@ -22,6 +22,12 @@
         </dependency>
 
         <dependency>
+            <groupId>top.crossoverjie.opensource</groupId>
+            <artifactId>cicada-ioc</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
