--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <modules>
         <module>cicada-core</module>
-        <module>cicada-example</module>
+       <!-- <module>cicada-example</module>-->
         <module>cicada-ioc</module>
         <module>cicada-base</module>
     </modules>
@@ -185,6 +185,9 @@
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
+                                <configuration>
+                                    <additionalparam>-Xdoclint:none</additionalparam>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
