--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,14 @@
         <module>cicada-example</module>
         <module>cicada-ioc</module>
         <module>cicada-base</module>
+        <module>cicada-db</module>
     </modules>
 
     <properties>
         <junit.version>4.11</junit.version>
         <netty.version>4.1.21.Final</netty.version>
         <logback.version>1.1.11</logback.version>
+        <mysql-connector-java.version>5.1.45</mysql-connector-java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -103,6 +105,14 @@
                 <artifactId>cicada-base</artifactId>
                 <version>1.0.2</version>
             </dependency>
+
+            <!-- mysql-connector -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql-connector-java.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
