first db example

--- a/cicada-example/pom.xml
+++ b/cicada-example/pom.xml
@@ -31,6 +31,18 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>top.crossoverjie.opensource</groupId>
+            <artifactId>cicada-db</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
