--- a/cicada-example/src/main/resources/application.properties
+++ b/cicada-example/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 cicada.port = 5688
 
 cicada.root.path = /cicada-example
+
+db.url=jdbc:mysql://localhost:3306/ssm?charset=utf8mb4&useUnicode=true&characterEncoding=utf-8
+db.username=root
+db.pwd=root
