--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <modules>
         <module>cicada-core</module>
-        <module>cicada-example</module>
+        <!--<module>cicada-example</module>-->
         <module>cicada-ioc</module>
         <module>cicada-base</module>
     </modules>
@@ -101,7 +101,7 @@
             <dependency>
                 <groupId>top.crossoverjie.opensource</groupId>
                 <artifactId>cicada-base</artifactId>
-                <version>1.0.2</version>
+                <version>1.0.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
