--- a/cicada-db/pom.xml
+++ b/cicada-db/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
         </dependency>
 
         <dependency>
